--- a/Test/index.html
+++ b/Test/index.html
@@ -13,6 +13,7 @@
         <h1>Кто ты из мстителей?</h1>
         <div class="question"></div>
         <ul class="answer"></ul>
+        <button class="btn-next" disabled>Далее</button>
     </main>
 
     <script src="js/quiz_data.js" charset="utf-8"></script>
